<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="300dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:text="@string/distanceSliderDescription"
                    android:textAlignment="center" />


                <com.google.android.material.slider.Slider
                    android:id="@+id/distanceSlider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="25dp"
                    android:stepSize="50"
                    android:valueFrom="50"
                    android:valueTo="500" />


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/testAlarmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/testAlarmBtn"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/testAlarmHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testAlarmHelp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>